fix bug of size of map on smaller screens so it doesn't cover entire screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,12 @@ form {
   background-color: gainsboro;
 }
 
+@media only screen and (max-width: 400px) {
+  #map {
+    height: 400px;
+  }
+}
+
 .hikes-info {
   font-family: 'Noto Sans', sans-serif;
   color: rgb(120, 120, 120);
